--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@shopify/react-native-skia": "^2.4.7",
     "@supabase/supabase-js": "^2.88.0",
     "expo": "~54.0.29",
@@ -25,6 +27,7 @@
     "expo-constants": "~18.0.12",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
+    "expo-gl": "~16.0.9",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "~15.0.8",
@@ -48,7 +51,8 @@
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/matter-js": "^0.20.2",
