--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@react-three/fiber": "^9.4.2",
     "@shopify/react-native-skia": "^2.4.7",
     "@supabase/supabase-js": "^2.88.0",
     "expo": "~54.0.29",
@@ -26,7 +25,6 @@
     "expo-constants": "~18.0.12",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
-    "expo-gl": "~16.0.9",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "~15.0.8",
@@ -50,8 +48,7 @@
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "three": "^0.182.0"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/matter-js": "^0.20.2",
